# GidTasks

./: .gitignore  README.md  README.rst  pyproject.toml  tasks.py
gid_tasks/: __init__.py  __main__.py  actions.py  errors.py
gid_tasks/_custom_invoke_classes/: custom_context.py  custom_programm.py  custom_task_objects.py
gid_tasks/hackler/: __init__.py  git_commander.py  imports_cleaner.py  workspace_cleaner.py
gid_tasks/hackler/dependencies_handling/: finder.py
gid_tasks/hackler/doc_hackler/: todo_collector.py
gid_tasks/hackler/doc_handling/todo_hackler/: __init__.py  todo_collector.py
gid_tasks/hackler/doc_handling/todo_hackler/todo_templates/: __init__.py  basic_template.jinja
gid_tasks/project_info/: __init__.py  main_module_item.py  project.py  toml.py  vscode_objects.py
gid_tasks/tool_items/: git_commander.py  imports_cleaner.py
gid_tasks/utility/: console.py  enums.py  misc.py
gid_tasks/utility/vscode_utils/: snippets_utils.py
gid_tasks/version_handling/: __init__.py  finder.py  version_item.py
tests/: conftest.py
tests/project_info_tests/: conftest.py  test_project.py  test_toml.py
tests/version_handling_tests/: test_finder.py  test_version_item.py
tools/: create_venv.cmd
tools/venv_setup_settings/: required_dev.txt  required_experimental.txt  required_misc.txt  required_test.txt
