[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "gid_tasks"
authors = [{ name = "BrocaProgs" }]
classifiers = ["License :: OSI Approved :: MIT License"]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ['version', 'description']
requires-python = ">=3.9"
dependencies = [
    "isort",
    "autoflake==1.4",
    "autopep8",
    "invoke==1.6.0",
    "attrs==21.2.0",
    "rich==10.12.0",
    "watchdog~=0.9.0"
]

[project.urls]
Source = "https://github.com/Giddius/GidTasks"

[project.scripts]

[project.optional-dependencies]

[tool.flit.sdist]
exclude = [
    "misc",
    "temp",
    "docs",
    "tools",
    ".pydeps",
    "tests",
    ".gitattributes",
    ".gitignore",
    ".editorconfig",
    "planning.todo",
    "tasks.py",
]

[tool.autoflake]
# additional_imports=None
expand_star_imports = true
remove_all_unused_imports = true
remove_duplicate_keys = false
remove_unused_variables = false
ignore_init_module_imports = false

[tool.autopep8]
ignore = ["E402", "E501", "E731"]
max_line_length = 250

[tool.isort]
balanced_wrapping = true
ensure_newline_before_comments = true
group_by_package = true
import_heading_typing = "* Typing Imports --------------------------------------------------------------------------------------->"
import_heading_firstparty = "* Local Imports --------------------------------------------------------------------------------------->"
import_heading_gid = "* Gid Imports ----------------------------------------------------------------------------------------->"
import_heading_qt = "* Qt Imports --------------------------------------------------------------------------------------->"
import_heading_stdlib = "* Standard Library Imports ---------------------------------------------------------------------------->"
import_heading_thirdparty = "* Third Party Imports --------------------------------------------------------------------------------->"
known_gid = [
    "gidtools",
    "gidlogger",
    "gidqtutils",
    "gidviewmodels",
    "gidapptools"
]
known_qt = ["PyQt5", "PyQt6", "PySide6", "pyqtgraph"]
known_typing = ["typing"]
length_sort = true
line_length = 200
lines_after_imports = 1
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "QT",
    "GID",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
indented_import_headings = false
force_to_top = ["typing"]

[tool.pytest.ini_options]
addopts = "-rA -vv --durations=0 --capture=tee-sys --show-capture=all --color=auto --code-highlight=yes"
